--- a/source/cwber/WinFormDemo/assets/output/WinFormDemo.exe.config
+++ b/source/cwber/WinFormDemo/assets/output/WinFormDemo.exe.config
@@ -18,7 +18,7 @@
     <add key="readLen" value="9"/>
     <add key="psd" value="0"/>
     <add key="target" value="0"/>
-    <add key="antList" value="1111"/>
+    <add key="ants" value="1111"/>
     <add key="scanTime" value="20"/>
     <add key="fastFlag" value="1"/>
     <add key="readMen" value="2"/>
