--- a/source/cwber/cwber/cwber.csproj
+++ b/source/cwber/cwber/cwber.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bridge.cs" />
     <Compile Include="ChromeWebBrowser.cs">
       <SubType>UserControl</SubType>
     </Compile>
